Fixed an issue where hovering over the slideshow button would force images out of place

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,7 @@
  }
 
  div.desc:hover {
-   border: 1px solid #777;
+   background-color: gray;
  }
 
  /* The sidebar menu */
